--- a/pomodoro/src/components/Logo/styles.module.css
+++ b/pomodoro/src/components/Logo/styles.module.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   gap: 2.4rem;
   padding-top: 3.2rem;
 }
