Implementa contador, implementa tipos no worker do contador e adiciona assets

--- a/pomodoro/src/components/DefaultInput/styles.module.css
+++ b/pomodoro/src/components/DefaultInput/styles.module.css
@@ -8,6 +8,7 @@
   border: 0.2rem solid transparent;
   border-bottom: 0.2rem solid var(--primary);
   transition: all 0.1s ease-in-out;
+  /* border-radius: 0.8rem; */
 }
 
 .input:focus {
