adiciona opção de cor 'disabled' ao botão padrão e implementa estilo correspondente; atualiza o histórico para gerenciar tarefas e limpar histórico com confirmação

--- a/pomodoro/src/components/DefaultButton/styles.module.css
+++ b/pomodoro/src/components/DefaultButton/styles.module.css
@@ -29,3 +29,9 @@
   background-color: var(--error);
   color: var(--text-over-error);
 }
+
+.disabled {
+  cursor: not-allowed;
+  background-color: gray !important;
+  opacity: 0.6;
+}
